Fixed bug where IconURL elements would have their underline extend past the visible area

--- a/src/styles/components/ui/IconUrl.css
+++ b/src/styles/components/ui/IconUrl.css
@@ -20,3 +20,11 @@
 .icon-url:hover::after {
     width: 100%;
 }
+
+/* Without the URL style */
+.icon {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+}
